--- a/entitlements.mas.plist
+++ b/entitlements.mas.plist
@@ -26,12 +26,12 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>3Q9T75U49X.chat.vigstudio.watercare</string>
+		<string>L69ZB83NZ6.chat.vigstudio.watercare</string>
 	</array>
 	<key>com.apple.application-identifier</key>
-	<string>3Q9T75U49X.chat.vigstudio.watercare</string>
+	<string>L69ZB83NZ6.chat.vigstudio.watercare</string>
 	<key>com.apple.developer.team-identifier</key>
-	<string>3Q9T75U49X</string>
+	<string>L69ZB83NZ6</string>
 	<key>com.apple.security.files.bookmarks.app-scope</key>
 	<true/>
 	<key>com.apple.security.files.bookmarks.document-scope</key>
