--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mattermost-desktop",
     "productName": "Water Care Chat",
-    "version": "5.6.0-develop.1",
+    "version": "5.6.0",
     "description": "Water Care Chat",
     "main": "dist/index.js",
     "author": "Mattermost, Inc. <feedback@mattermost.com>",
@@ -53,8 +53,8 @@
         "test:unit-ci": "cross-env NODE_ENV=jest jest",
         "test:coverage": "jest --coverage",
         "package:all": "cross-env NODE_ENV=production npm-run-all package:windows package:windows-nsis package:mac package:mac-with-universal package:linux",
-        "package:windows": "npm-run-all build-prod && electron-builder --win zip --x64 --arm64 --publish=never",
-        "package:windows-nsis": "npm-run-all build-prod-upgrade && electron-builder --win zip nsis --x64 --arm64 --publish=never",
+        "package:windows": "npm-run-all build-prod && electron-builder --win zip --x64 --ia32 --arm64 --publish=never",
+        "package:windows-nsis": "npm-run-all build-prod-upgrade && electron-builder --win zip nsis --x64 --ia32 --arm64 --publish=never",
         "package:mac": "npm-run-all build-prod && electron-builder --mac --x64 --arm64 --publish=never",
         "package:mac-with-universal": "npm-run-all build-prod && electron-builder --mac --x64 --arm64 --universal --publish=never",
         "package:mas": "cross-env NODE_ENV=production IS_MAC_APP_STORE=true npm-run-all check-build-config build && electron-builder --mac mas --universal --publish=never",
